fixed scrollbar display bug on homepage

--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -95,3 +95,7 @@ h1 {
    
 }
 
+
+::-webkit-scrollbar {
+    display: none;
+}
